# svelte-rust-todo-app

./: README.md
backend/: .env.example  Cargo.toml  README.md  docker-compose.yaml
backend/migrations/: 20240814005330_create-todos-table.down.sql  20240814005330_create-todos-table.up.sql
backend/postgres/init/: init.sql
backend/src/: main.rs  routes.rs
backend/src/handlers/: todo_handler.rs
backend/src/services/: mod.rs  todo_service.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/lib/components/: AddField.svelte  TodoCard.svelte
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
