[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.39.2", features = ['rt-multi-thread'] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid" ] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
